task_manager_parent/k8s/service-tasks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-tasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-tasks
  template:
    metadata:
      labels:
        app: service-tasks
    spec:
      serviceAccountName: app-sa
      containers:
        - name: service-tasks
          image: muzza1103/task_manager_service-tasks:latest
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20

          ports:
            - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: service-tasks
spec:
  selector:
    app: service-tasks
  ports:
    - port: 8080
      targetPort: 8080
