task_manager_parent/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: service-users
                port:
                  number: 8081
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: service-users
                port:
                  number: 8081
          - path: /api/tasks
            pathType: Prefix
            backend:
              service:
                name: service-tasks
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
