task_manager_parent/k8s/netpol-service-users.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-users
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: service-users
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8081
